# fo-projekt

./: .gitattributes  .gitignore  .rgignore  Justfile  README.md  pyproject.toml  pyrightconfig.json  sweep_config.yml
data/raw/: training_set.csv  training_set_metadata.csv
data/scalers/: distmod  hostgal_specz  max_snr_0  max_snr_1  max_snr_2  max_snr_3  max_snr_4  max_snr_5  mwebv
models/: run-hxzx9cgm-supernova-epoch=44-val_acc=0.73.ckpt
notebooks/: 01-mg-data-processing.ipynb  02-mg-lstm-training.ipynb  02-mg-torch-dataset.ipynb  03-mg-full-model.ipynb  04-mb-feature-engineering-further-processing.ipynb  04-mg-full-model-training.ipynb  05-mg-full-model-training.ipynb  06-mg-test-set-evaluation.ipynb  07-mg-cleanup-wandb-export.ipynb
reports/: best-model-eval.json  report.md  wandb-sweep-export.csv
supernova/: config.py  dataset.py  features.py  main.py  plots.py  preprocessing.py  sweep.py
supernova/modeling/: eval.py  model.py  predict.py  train.py
sweep/: runner.py
tests/: test_dataset.py
