[project]
name = "fo-projekt"
version = "0.1.0"
description = "Supernova type classification based on photometric data"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "markupsafe==2.1.3",
    "matplotlib>=3.10.8",
    "pandas>=2.3.3",
    "torch==2.7.1+cu118",
]


[[tool.uv.index]]
# This is for ensuring a torch version that is compatible with my NVIDIA GeForce GTX 1060 6GB GPU
name = "pytorch"
url = "https://download.pytorch.org/whl/cu118"

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "notebook>=7.1.3",
]
