[project]
name = "fo-projekt"
version = "0.1.0"
description = "Supernova type classification based on photometric data"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "lightning>=2.6.0",
    "markupsafe==2.1.3",
    "matplotlib>=3.10.8",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "pandas-stubs>=2.3.3.251219",
    "pyyaml>=6.0.3",
    "scikit-learn>=1.8.0",
    "scikit-learn-stubs>=0.0.3",
    "torch==2.7.1+cu118",
    "tqdm>=4.66.5",
    "wandb>=0.23.1",
]


[[tool.uv.index]]
# This is for ensuring a torch version that is compatible with my NVIDIA GeForce GTX 1060 6GB GPU
name = "pytorch"
url = "https://download.pytorch.org/whl/cu118"

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "notebook>=7.1.3",
]
